--- a/results.css
+++ b/results.css
@@ -1,8 +1,8 @@
 body {
     background-image: url('background.JPEG');
-    background-size: cover; /* Cover the entire page */
-    background-position: center; /* Center the background image */
-    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /*cover the entire page*/
+    background-position: center; /*center the background image*/
+    background-repeat: no-repeat; /*do not repeat the image*/
     color: white;
     text-align: center;
     font-family: 'Arial', sans-serif;
@@ -12,20 +12,20 @@ body {
     display: flex;
     align-items: center;
     background-color: white;
-    padding: 10px 20px; /* Adjust the padding as needed */
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Optional: Adds a slight shadow for depth */
+    padding: 10px 20px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1); /*add a slight shadow for depth effect*/
 }
 
 .logo {
-    height: 50px; /* Adjust based on your logo's size */
-    width: auto; /* Keeps the logo's aspect ratio */
-    margin-right: 20px; /* Adds some space between the logo and the title */
+    height: 50px; 
+    width: auto; /*keeps the logo's aspect ratio*/
+    margin-right: 20px; /*add some space between the logo and the title*/
 }
 
 .top-bar h1 {
     margin: 0;
-    font-size: 24px; /* Adjust based on your design */
-    color: #2fad66; /* Adjust the color as needed */
+    font-size: 24px;
+    color: #2fad66; /*website theme color*/
 }
 
 .lead {
@@ -38,18 +38,17 @@ body {
 }
 
 .result-image {
-    display: inline-block; /* Makes the image a block element */
+    display: inline-block;
     max-width: 800px;
     max-height: 600px;
-    margin: 0 auto; /* Centers the image horizontally */
-    /*border: 2px solid white; /* Adds a white border around the image */
-    object-fit: contain; /* Maintain aspect ratio within max dimensions */
+    margin: 0 auto; /*centers the image horizontally*/
+    object-fit: contain; /* maintain aspect ratio within max dimensions*/
     box-sizing: border-box;
 }
 
 .carousel-item {
-    justify-content: center; /* Center horizontally for flex items */
-    align-items: center; /* Center vertically if needed */
+    justify-content: center;
+    align-items: center;
 }
 
 .btn {
